--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web3auth",
+  "name": "next-web3auth-example",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,13 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.1.4",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "next": "13.1.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "@solana/web3.js": "^1.66.1",
+    "@walletconnect/client": "^1.8.0",
+    "@web3auth/base": "^4.0.0",
+    "@web3auth/modal": "^4.2.1",
+    "@web3auth/openlogin-adapter": "^4.2.0",
+    "@web3auth/solana-provider": "^4.1.1u",
+    "i18n": "^0.15.1",
+    "next": "^12.3.1",
+    "react": "18",
+    "react-dom": "18"
+  },
+  "devDependencies": {
+    "@types/elliptic": "^6.4.14",
+    "@types/node": "17.0.35",
+    "@types/react": "18.0.9",
+    "@types/react-dom": "18.0.4",
+    "eslint": "8.15.0",
+    "eslint-config-next": "12.1.6",
+    "typescript": "4.6.4"
   }
 }
